config-root/namespaces/jx-staging/spring/spring-spring-deploy.yaml
# Source: spring/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-spring
  labels:
    draft: draft-app
    chart: "spring-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'spring'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: spring-spring
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: spring-spring
    spec:
      serviceAccountName: spring-spring
      containers:
        - name: spring
          image: "ghcr.io/shgattu/spring:0.0.5"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
