config-root/namespaces/jx-staging/spring/spring-svc.yaml
# Source: spring/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring
  labels:
    chart: "spring-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'spring'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-spring
